# customer-loyalty-workflow

./: .classpath  .gitignore  .project  LICENSE  README.md  activities.go  build.gradle  create_customer.py  email_strings.go  email_strings.py  go.mod  go.sum  loyalty_workflow.py  main.py  replay_test.go  settings.gradle  shared.go  shared.py  starter_replay.json  worker.py  workflow.go  workflow_test.go
go/: activities.go  go.mod  go.sum  shared.go  status.go  workflow.go  workflow_test.go
go/common/: constants.go  helpers.go
go/loyalty/: activities.go  go.mod  shared.go  simple_replay.json  workflow.go  workflow_test.go  zap_adapter.go
go/loyalty/starter/: main.go
go/loyalty/worker/: main.go
go/starter/: main.go
go/status/: status.go
go/worker/: main.go
go/zapadapter/: zap_adapter.go
java/src/main/java/actorworkflow/: Customer.java  CustomerLoyaltyActivities.java  (+8 more)
java/src/main/resources/: logback.xml
python/: activities.py  create_customer.py  email_strings.py  loyalty_workflow.py  pyproject.toml  shared.py  worker.py
python/tests/: simple_replay.json  test_replay.py  workflow_tests.py
src/main/java/actorworkflow/: Customer.java  CustomerActor.java  CustomerLoyaltyActivities.java  CustomerLoyaltyActivitiesImpl.java  CustomerLoyaltyWorkflow.java  CustomerLoyaltyWorkflowImpl.java  EmailStrings.java  Shared.java  Starter.java  StatusTier.java  Worker.java
src/test/java/actorworkflow/: CustomerLoyaltyTest.java
src/test/resources/: simple_replay.json
starter/: main.go
status/: status.go
tests/: test_replay.py
worker/: main.go
(+2 files in other folders)
