[tool.poetry]
name = "python-loyalty"
version = "0.1.0"
description = "Customer loyalty workflow in Python"
authors = ["Andrew Fitz Gibbon <fitz@temporal.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
temporalio = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
test = "pytest"
